Thu Feb 13 14:27:41 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in:
		Link wsock32 library (win32)

	* kinit.c:
		Added krb5_read_password implementation for win32 console.
		Initialize Winsock library (win32)

Sat Feb  8 15:37:39 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in:
		Build kinit.exe (win32 console app)

	* kinit.c:
		Removed unused local variables
		Created prototypes for internal functions (win32)

Mon Jan 27 16:44:20 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Thu Dec  5 21:59:08 1996  Tom Yu  <tlyu@mit.edu>

	* kinit.M: v5srvtab -> krb5.keytab [279]

Wed Nov  6 09:31:35 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* kinit.c (main): Check the return code from krb5_init_context,
		and print an error message if appropriate.  No longer call
		krb5_init_ets(), as it's no longer necessary.

Tue Sep 10 14:13:52 1996  Tom Yu  <tlyu@mit.edu>

	* kinit.M: remove ".so man1/header.doc"

Sun Jul  7 15:21:58 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kinit.M: Document -R option.

	* kinit.c (krb5_tgt_gen): Code from krb5_validate_tgt() modified
	to handle both renewal and validation of postdated tickets. 
	(krb5_renew_tgt): Takes a credential cache with a tgt with the
	"renewable flag" set and asks ths kdc to renew it. Cache is wiped
	and only new tgt is stored.
	(main): New option -R to renew tickets.

Thu Jun 20 20:19:44 1996  Marc Horowitz  <marc@mit.edu>

	* kinit.M, kinit.c (main): Add a -s option to kinit which specifies
 	the service name to be used in the TGS_REQ.

Fri May  3 00:28:10 1996  Mark Eichin  <eichin@cygnus.com>

	* kinit.c (krb5_validate_tgt): new function, takes a credential
	cache with an tgt with the "invalid flag" set, and asks the kdc to
	validate it. Wipes cache and stores only the newly validated
	credential. (After all, there won't be any others, because the
	invalid krbtgt couldn't have gotten them.) Most of the code is